--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,18 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".AddEditContactActivity">
-        </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name="com.example.lab_7.MainActivity"
+                  android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+
+        <activity android:name="com.example.lab_7.AddEditContactActivity"
+                  android:parentActivityName="com.example.lab_7.MainActivity">
+
         </activity>
     </application>
 
